--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </ul>
             </nav>
        
-        <div id-'middle-wrapper'>
+        <div id='middle-wrapper'>
             <div id='main-content-wrapper'>
                 <section class='image-dontent'>
                     <h1><a href='https://www.google.com/'>Favorite Link</a></h1>
